--- a/functions/package.json
+++ b/functions/package.json
@@ -15,13 +15,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@genkit-ai/ai": "latest",
-    "@genkit-ai/core": "latest",
-    "@genkit-ai/flow": "latest",
-    "@genkit-ai/google-genai": "latest",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^5.1.1",
-    "genkit": "latest",
+    "genkit": "^1.20.0",
+    "@genkit-ai/google-genai": "^1.20.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
